log

Thu 14 Mar 2024 08:33:53 PM UTC: 
 exercises.c | 48 +++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 45 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:66:12: error: expected expression before ‘[’ token
   66 |   result = [size1 + size2];
      |            ^
Compilation failed
f878255
Thu 14 Mar 2024 08:34:17 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:12: error: expected expression before ‘[’ token
   65 |   result = [size1 + size2];
      |            ^
Compilation failed
2487210
Thu 14 Mar 2024 08:34:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:12: error: expected expression before ‘[’ token
   65 |   result = [size1 + size2]
      |            ^
exercises.c:65:27: error: expected ‘;’ before ‘while’
   65 |   result = [size1 + size2]
      |                           ^
      |                           ;
   66 |   while (i < size1 && j < size2)
      |   ~~~~~                    
exercises.c:69:5: error: ‘else’ without a previous ‘if’
   69 |     else
      |     ^~~~
Compilation failed
0939edc
Thu 14 Mar 2024 08:35:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:13: error: expected expression before ‘[’ token
   65 |   *result = [size1 + size2];
      |             ^
Compilation failed
20a3e07
Thu 14 Mar 2024 08:36:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:10: error: expected expression before ‘]’ token
   65 |   result[] = [size1 + size2];
      |          ^
Compilation failed
7ff6f4a
